# sol-sdk

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
.github/workflows/: release-packages.yml
migrations/: deploy.ts
programs/app/: Cargo.toml
programs/app/src/: constants.rs  errors.rs  events.rs  instructions.rs  lib.rs  states.rs  utils.rs
programs/skwizz/: Cargo.toml
programs/skwizz/src/: errors.rs  instructions.rs  lib.rs  states.rs
scripts/: airdrop.sh  deploy-program.sh  setup.sh
src/: index.ts
src/constants/: PdaConstants.ts  ProgramIds.ts  index.ts
src/parse/: decodeIx.ts  decodeIxWithIdl.ts  parseInitializeIx.ts  parseIx.ts
src/sdk/: AppSdk.ts  SkwizzSdk.ts
src/sdk/instructions/: createInitializeIx.ts  createIx.ts  getters.ts
src/tests/: id.json  program.test.ts
src/tests/constants/: Seed.ts
src/tests/utils/: getAccountLamports.ts  requestAirdrops.ts  sendTransactionForTest.ts
src/utils/: getKeypair.ts  tokenAccountInstruction.ts
src/utils/pdas/: findProgramPda.ts  findUserPda.ts  index.ts
src/utils/solana/: ixToTx.ts  ixsToTx.ts
